examples/parse_error/missing_closing_paren4.nbt
dimension Foo = Bar / (Baz * Qux
